--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1870,11 +1870,11 @@ label .form_control_indicator::before {
   margin-right: 10px;
   fill: currentColor;
 }
-[data-state--view-mode="editmode"] .tags__ico {
-  padding-top: 5px;
+.tags__ico--medium-padded {
+  padding-top: 6px;
   padding-bottom: 5px;
 }
-[data-state--view-mode="publicmode"] .tags__ico {
+.tags__ico--small-padded {
   padding-top: 3px;
   padding-bottom: 2px;
 }
